 -fixed a bug in the math library which causes some variations to fail which used trigonometric functions with large
  arguments (e.g. "phoenix_julia")
 -added a check for path-settings which contain space-characters and display a warning in this case
  - this check can be skipped by enabling the property "skipPathCheckAtStartup" in the Preferences
 -added a context-menu to the resources-dialog for editing text (copy, cut, paste)
 -made the properties-editor in the Preferences-window more accessible, increased the size of the button for selecting folders
 -exchanged the four mutation-trend-combo-boxes in the MutaGen by a single combobox. This allows to select the trend for all four mutations
  with one click. Having four separate combo-boxed gave too much control where it is not needed.
 -alphabetic sorting of gradients and scripts inside of their tree-views
 -removed the parameters "X" and "Y" of "circleLinear" which were never used
 -removed the parameter "scale_t" of "heart_wf" which was never used

V8.00 (19.02.2023)
 - huge improvements in solid rendering, hence the big change in version number:
    -now it feels like it should have from the start, i.e. it's fun to use
    -needs less render time (about 66%)
    -quicker response in the preview-render
    -more accurate calculation of normal vectors
    -more accurate lighting calculation
    -needs less spatial oversampling in order to get clear details in many cases
    -there are three other sizes of shadow maps available
    -fixed an old bug which caused the shadow direction differing from the light direction
    -much faster tone-mapping (the final phase of rendering)
    -use reduced shadow-map size when rendering (smaller) previews to save memory
    -new "pre_affine3D"- and "post_affine3D"-variations for more precise control over affine transforms in 3D space
    -all solid-random-flame-generators now support many more base-shapes