@@ -5,6 +5,7 @@ V8.xx (xx.xx.2023)
   arguments (e.g. "phoenix_julia")
  -added a check for path-settings which contain space-characters and display a warning in this case
   - this check can be skipped by enabling the property "skipPathCheckAtStartup" in the Preferences
+ -fixed calculation of camera angle of the CUDA-renderer (was off when roll was not zero)
  -added a context-menu to the resources-dialog for editing text (copy, cut, paste)
  -made the properties-editor in the Preferences-window more accessible, increased the size of the button for selecting folders
  -exchanged the four mutation-trend-combo-boxes in the MutaGen by a single combobox. This allows to select the trend for all four mutations
@@ -12,6 +13,7 @@ V8.xx (xx.xx.2023)
  -alphabetic sorting of gradients and scripts inside of their tree-views
  -removed the parameters "X" and "Y" of "circleLinear" which were never used
  -removed the parameter "scale_t" of "heart_wf" which was never used
+ -changed the labels of the checkboxes inside the profile-dialogs to be also visible when the controls are inactive
 
 V8.00 (19.02.2023)
  - huge improvements in solid rendering, hence the big change in version number:
